--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: grpc-gateway-ingress
   annotations:
-    # nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
