--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,26 +3,25 @@ kind: Ingress
 metadata:
   name: grpc-gateway-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /v1/$2
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    # nginx.ingress.kubernetes.io/enable-cors: "true"
+    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
+    # nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
+    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
   - host: nmost.site
     http:
       paths:
-      - path: /api(/v1/news.*)
+      - path: /v1/news
         pathType: Prefix
         backend:
           service:
             name: grpc-gateway
             port:
               number: 80
-      - path: /api(/v1/auth.*)
+      - path: /v1/auth
         pathType: Prefix
         backend:
           service:
