--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: grpc-gateway-ingress
   annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     # nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # nginx.ingress.kubernetes.io/enable-cors: "true"
     # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
@@ -10,6 +11,10 @@ metadata:
     # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     kubernetes.io/ingress.class: nginx
 spec:
+  tls:
+  - hosts:
+    - nmost.site
+    secretName: nmost-site-tls
   rules:
   - host: nmost.site
     http:
