--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -27,3 +27,10 @@ spec:
             name: grpc-gateway
             port:
               number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80
