--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - deployment.yaml
-- ingress.yaml
+- gateway.yaml
 images:
 - name: ghcr.io/impit-mpit/api-gateway-master
   newTag: a27ed56
