--- a/k8s/gateway.yaml
+++ b/k8s/gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: grpc-gateway
-  namespace: default
+  namespace: nmost
 spec:
   selector:
     istio: ingressgateway
@@ -27,7 +27,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: grpc-gateway-vs
-  namespace: default
+  namespace: nmost
 spec:
   hosts:
   - "nmost.site"
