--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: grpc-gateway
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: grpc-gateway
