--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,8 +11,12 @@ spec:
     metadata:
       labels:
         app: grpc-gateway
+        version: v1
       annotations:
         sidecar.istio.io/inject: "true"
+        proxy.istio.io/config: |
+          proxyMetadata:
+            ISTIO_META_HTTP_PROTOCOL: http
     spec:
       containers:
       - name: grpc-gateway
