--- a/k8s/gateway.yaml
+++ b/k8s/gateway.yaml
@@ -44,6 +44,8 @@ spec:
         host: grpc-gateway
         port:
           number: 80
+      timeout: 3600s  # Увеличиваем общий таймаут
+    websocketUpgrade: true  # Включаем поддержку WebSocket
     corsPolicy:
       allowOrigins:
       - exact: "*"
