--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -38,6 +38,8 @@ spec:
           value: "category-service:3001"
         - name: AUTH_SERVICE
           value: "auth-service-grpc:3001"
+        - name: SPECIALIST_SERVICE
+          value: "specialist-service:3001"
         resources:
           requests:
             cpu: "100m"
