--- a/k8s/auth.yaml
+++ b/k8s/auth.yaml
@@ -35,7 +35,7 @@ spec:
     # Публичные GET запросы
     - to:
         - operation:
-            methods: ["GET", "POST"]
+            methods: ["GET", "POST", "PUT", "DELETE"]
             paths: ["*"]
     
     # Административные операции (требуют JWT)
